{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "702cf739-425e-40c0-9732-fd47ac3f0617",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "d067e798-a51f-4de7-8cb5-84fc3fcaa25d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootBullet",
                    "type": "Button",
                    "id": "b84fcff9-ff1b-4035-bcd0-fc3cf04afd2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootLaser",
                    "type": "Button",
                    "id": "a711496a-0199-4151-89fb-e0a4ebde2b1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29cf3e85-b58a-48b3-bb9a-99b6c5c62929",
                    "path": "<Keyboard>/w",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06343a29-8c02-4059-bf2f-bcfae157f628",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a51df4a-6922-4d3d-8762-b56a50180b87",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "ShootBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1809a4fa-8ff4-46cf-9b5d-e51b9be6c167",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "ShootLaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerControl",
            "bindingGroup": "PlayerControl",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}